tests/expectations/compiler/dynamic_call/wrong_arg_type_fail.out
Error [ETYC0372117]: Expected type `u32` but type `bool` was found.
    --> compiler-test:11:42
     |
  11 |         return Adder@(target)::sum(1u32, true);
     |                                          ^^^^
